--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -7,77 +7,37 @@
    "outputs": [],
    "source": [
     "from IPython.display import HTML, display\n",
-    "import ipywidgets as widgets\n",
     "\n",
-    "# Beautiful welcome message\n",
     "display(HTML(\"\"\"\n",
-    "<div style='background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); \n",
-    "            color: white; padding: 30px; border-radius: 15px; margin-bottom: 30px;\n",
+    "<div style='text-align: center; padding: 40px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);\n",
+    "            color: white; border-radius: 15px; margin: 30px 0;\n",
     "            box-shadow: 0 8px 32px rgba(0,0,0,0.1);'>\n",
-    "    <h1 style='margin: 0; font-size: 36px; text-align: center; font-weight: bold;'>\n",
-    "        🛰️ AlphaEarth Land Cover Classifier\n",
+    "    \n",
+    "    <h1 style='margin: 0; font-size: 48px; font-weight: bold; margin-bottom: 20px;'>\n",
+    "        🛰️ WELCOME\n",
     "    </h1>\n",
-    "    <p style='margin: 15px 0 0 0; font-size: 18px; text-align: center; opacity: 0.9;'>\n",
-    "        <strong>Welcome to the Google AlphaEarth Land Cover Classifier App!</strong><br>\n",
-    "        Here, you can explore and interact with the 64 embeddings from Google AlphaEarth \n",
-    "        while classifying land cover types using validated labels from the Ecological Society of America.\n",
-    "    </p>\n",
-    "</div>\n",
-    "\n",
-    "<div style='background: #f8f9ff; padding: 25px; border-radius: 12px; margin-bottom: 25px; text-align: center;'>\n",
-    "    <h2 style='color: #1e293b; margin: 0 0 15px 0;'>🚀 Quick Launch</h2>\n",
-    "    <p style='color: #374151; margin: 0; font-size: 16px;'>\n",
-    "        Click the buttons below to set up and launch your satellite analysis app:\n",
-    "    </p>\n",
-    "</div>\n",
-    "\n",
-    "<div style='text-align: center; background: #f1f5f9; padding: 20px; border-radius: 10px; margin-bottom: 25px;'>\n",
-    "    <div style='border-top: 1px solid #cbd5e1; margin: 15px 0; padding-top: 15px;'>\n",
-    "        <p style='color: #64748b; margin: 0; font-size: 14px; line-height: 1.5;'>\n",
-    "            Created with ❤️ using Google Earth Engine, AlphaEarth Embeddings, and Machine Learning<br>\n",
-    "            <strong>Created by:</strong> Felipe Benavides, SDS Lab - Northeastern University and the Gulf of Maine Research Institute<br>\n",
-    "            📧 <a href=\"mailto:fbenavides@gmri.org\" style=\"color: #0ea5e9; text-decoration: none;\">fbenavides@gmri.org</a>\n",
-    "        </p>\n",
+    "    \n",
+    "    <h2 style='margin: 0; font-size: 32px; font-weight: bold; margin-bottom: 30px;'>\n",
+    "        Google AlphaEarth Land Cover Classifier\n",
+    "    </h2>\n",
+    "    \n",
+    "    <div style='background: rgba(255,255,255,0.1); padding: 25px; border-radius: 10px; margin: 20px 0;'>\n",
+    "        <h2 style='margin: 0; font-size: 28px; font-weight: bold; color: #ffeb3b;'>\n",
+    "            📋 Go to RUN → RUN ALL CELLS to Start the App\n",
+    "        </h2>\n",
     "    </div>\n",
+    "    \n",
+    "    <p style='margin: 20px 0 0 0; font-size: 16px; opacity: 0.9;'>\n",
+    "        Explore 64-dimensional satellite embeddings from Google AlphaEarth<br>\n",
+    "        Created by: Felipe Benavides, SDS Lab - Northeastern University and Gulf of Maine Research Institute<br>\n",
+    "        📧 fbenavides@gmri.org\n",
+    "    </p>\n",
     "</div>\n",
     "\"\"\"))\n",
     "\n",
-    "# Simple execution buttons\n",
-    "def create_launcher():\n",
-    "    setup_button = widgets.Button(\n",
-    "        description='🔧 Setup & Authenticate',\n",
-    "        button_style='primary',\n",
-    "        layout=widgets.Layout(width='280px', height='50px', margin='10px')\n",
-    "    )\n",
-    "    \n",
-    "    launch_button = widgets.Button(\n",
-    "        description='🚀 Launch App Interface',\n",
-    "        button_style='success', \n",
-    "        layout=widgets.Layout(width='280px', height='50px', margin='10px')\n",
-    "    )\n",
-    "    \n",
-    "    status_output = widgets.Output()\n",
-    "    \n",
-    "    def setup_app(b):\n",
-    "        with status_output:\n",
-    "            print(\"🔧 Setting up environment and authenticating Earth Engine...\")\n",
-    "            print(\"📦 This will run your setup code from the next cell...\")\n",
-    "            print(\"✅ Click 'Run' on the next cell to complete setup!\")\n",
-    "    \n",
-    "    def launch_app(b):\n",
-    "        with status_output:\n",
-    "            print(\"🚀 Loading app interface...\")\n",
-    "            print(\"📱 After setup is complete, this will launch your app interface!\")\n",
-    "    \n",
-    "    setup_button.on_click(setup_app)\n",
-    "    launch_button.on_click(launch_app)\n",
-    "    \n",
-    "    return widgets.VBox([\n",
-    "        widgets.HBox([setup_button, launch_button], layout=widgets.Layout(justify_content='center')),\n",
-    "        status_output\n",
-    "    ], layout=widgets.Layout(align_items='center'))\n",
-    "\n",
-    "display(create_launcher())"
+    "print(\"🚀 WELCOME TO ALPHAEARTH!\")\n",
+    "print(\"📋 Please click: Cell → Run All (or press Ctrl+Shift+Enter multiple times)\")\n",
+    "print(\"🎯 The interactive app will appear below after all cells complete!\")"
    ]
   },
   {
