--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,47 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML, display\n",
-    "\n",
-    "display(HTML(\"\"\"\n",
-    "<div style='text-align: center; padding: 40px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);\n",
-    "            color: white; border-radius: 15px; margin: 30px 0;\n",
-    "            box-shadow: 0 8px 32px rgba(0,0,0,0.1);'>\n",
-    "    \n",
-    "    <h1 style='margin: 0; font-size: 48px; font-weight: bold; margin-bottom: 20px;'>\n",
-    "        🛰️ WELCOME\n",
-    "    </h1>\n",
-    "    \n",
-    "    <h2 style='margin: 0; font-size: 32px; font-weight: bold; margin-bottom: 30px;'>\n",
-    "        Google AlphaEarth Land Cover Classifier\n",
-    "    </h2>\n",
-    "    \n",
-    "    <div style='background: rgba(255,255,255,0.1); padding: 25px; border-radius: 10px; margin: 20px 0;'>\n",
-    "        <h2 style='margin: 0; font-size: 28px; font-weight: bold; color: #ffeb3b;'>\n",
-    "            📋 Go to RUN → RUN ALL CELLS to Start the App\n",
-    "        </h2>\n",
-    "    </div>\n",
-    "    \n",
-    "    <p style='margin: 20px 0 0 0; font-size: 16px; opacity: 0.9;'>\n",
-    "        Explore 64-dimensional satellite embeddings from Google AlphaEarth<br>\n",
-    "        Created by: Felipe Benavides, SDS Lab - Northeastern University and Gulf of Maine Research Institute<br>\n",
-    "        📧 fbenavides@gmri.org\n",
-    "    </p>\n",
-    "</div>\n",
-    "\"\"\"))\n",
-    "\n",
-    "print(\"🚀 WELCOME TO ALPHAEARTH!\")\n",
-    "print(\"📋 Please click: Cell → Run All (or press Ctrl+Shift+Enter multiple times)\")\n",
-    "print(\"🎯 The interactive app will appear below after all cells complete!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 113,
    "metadata": {
     "tags": []
    },
@@ -272,9 +232,52 @@
     "            value=\"\"\"\n",
     "            <div style='text-align: center; padding: 20px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);\n",
     "                        color: white; border-radius: 10px; margin-bottom: 20px;'>\n",
-    "                <h1 style='margin: 0; font-size: 28px;'>🛰️ Google AlphaEarth Land Cover Classifier</h1>\n",
-    "                <p style='margin: 10px 0 0 0; font-size: 14px; opacity: 0.9;'>\n",
-    "                    Advanced satellite embedding analysis for land cover classification\n",
+    "                <h1 style='margin: 0; font-size: 28px;'>🛰️ Google Alpha Earth Foundation Model for Land Cover Classification</h1>\n",
+    "            </div>\n",
+    "            \"\"\"\n",
+    "        )\n",
+    "\n",
+    "        # Welcome description box\n",
+    "        self.welcome_box = widgets.HTML(\n",
+    "            value=\"\"\"\n",
+    "            <div style='background: #f8f9ff; padding: 20px; border-radius: 10px; margin-bottom: 20px;\n",
+    "                        border-left: 4px solid #4f46e5; color: #1e293b;'>\n",
+    "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6;'>\n",
+    "                    <strong>Welcome to this App, that uses the AlphaEarth Foundation Model for Land Cover Classification tasks.</strong> \n",
+    "                    You will interact face to face with the 64 embeddings from Google's AlphaEarth Foundation Model to classify \n",
+    "                    land cover types using validated label data from the Ecological Society of America (2020). This is a unique opportunity \n",
+    "                    to explore how abstract embeddings from a cutting-edge Google DeepMind foundation model capture ecological patterns \n",
+    "                    and to identify which embeddings are most important for specific pairwise classification tasks.\n",
+    "                </p>\n",
+    "                \n",
+    "                <p style='margin: 0 0 10px 0; font-size: 16px; font-weight: 500; color: #1e40af;'>\n",
+    "                    For example, you can compare:\n",
+    "                </p>\n",
+    "                <ul style='margin: 0 0 15px 20px; font-size: 15px; line-height: 1.5; color: #2563eb;'>\n",
+    "                    <li style='color: #2563eb; font-weight: 500;'><strong>Built-up vs Water</strong></li>\n",
+    "                    <li style='color: #2563eb; font-weight: 500;'><strong>Cropland vs Grassland</strong></li>\n",
+    "                    <li style='color: #2563eb; font-weight: 500;'><strong>Shrubland vs Tree cover</strong></li>\n",
+    "                </ul>\n",
+    "                \n",
+    "                <p style='margin: 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>\n",
+    "                    and determine which embeddings play the most significant role in those pairwise distinctions. To support \n",
+    "                    your analysis, the app provides four classifier options: Random Forest, XGBoost, Gradient Boosting, and LightGBM, \n",
+    "                    plus other control parameters. All user interactions will be recorded as part of an effort to better interpret \n",
+    "                    these embeddings and translate them into more intuitive, lower-dimensional representations tailored for specific applications.\n",
+    "                </p>\n",
+    "            </div>\n",
+    "            \"\"\"\n",
+    "        )\n",
+    "\n",
+    "        # Attribution box\n",
+    "        self.attribution_box = widgets.HTML(\n",
+    "            value=\"\"\"\n",
+    "            <div style='background: #f1f5f9; padding: 15px; border-radius: 8px; margin-bottom: 20px;\n",
+    "                        text-align: center; border-left: 4px solid #64748b;'>\n",
+    "                <p style='margin: 0; font-size: 14px; color: #475569;'>\n",
+    "                    This App was created by Felipe Benavides from the SDS Lab at Northeastern University \n",
+    "                    and the Gulf of Maine Research Institute.<br>\n",
+    "                    📧 <a href=\"mailto:pipeben@gmail.com\" style=\"color: #0ea5e9; text-decoration: none;\">pipeben@gmail.com</a>\n",
     "                </p>\n",
     "            </div>\n",
     "            \"\"\"\n",
@@ -543,6 +546,10 @@
     "        app_layout = widgets.VBox([\n",
     "            custom_css,\n",
     "            self.title,\n",
+    "            self.welcome_box,\n",
+    "            self.attribution_box,\n",
+    "\n",
+    "            # Interactive Region Selection\n",
     "\n",
     "            # Interactive Region Selection\n",
     "            self.region_title,\n",
@@ -1052,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 115,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1074,7 +1081,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b906abd3a15942b69fc9262d6e0f886f",
+       "model_id": "786d98d94bea41d5940ee4fb1b559f24",
        "version_major": 2,
        "version_minor": 0
       },
