--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 117,
    "metadata": {
     "tags": []
    },
@@ -264,6 +264,8 @@
     "                    your analysis, the app provides four classifier options: Random Forest, XGBoost, Gradient Boosting, and LightGBM, \n",
     "                    plus other control parameters. All user interactions will be recorded as part of an effort to better interpret \n",
     "                    these embeddings and translate them into more intuitive, lower-dimensional representations tailored for specific applications.\n",
+    "                    After a few exercises, you’ll gain intuitive insights into how powerful this foundation model can be for your machine learning tasks\n",
+    "                    in geospatial science. 🙌\n",
     "                </p>\n",
     "            </div>\n",
     "            \"\"\"\n",
@@ -1059,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 119,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1081,7 +1083,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "786d98d94bea41d5940ee4fb1b559f24",
+       "model_id": "e0b27e17cc2b4b5082df3521f9b76bcc",
        "version_major": 2,
        "version_minor": 0
       },
