--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 95,
    "metadata": {
     "tags": []
    },
@@ -42,7 +42,7 @@
     "\n",
     "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl\n",
     "\n",
-    "# --- Optional imports for advanced algorithms ---\n",
+    "# --- Optional imports for classifying algorithms ---\n",
     "def _get_xgb():\n",
     "    try:\n",
     "        import xgboost as xgb\n",
@@ -60,6 +60,9 @@
     "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--quiet\", \"lightgbm\"])\n",
     "        import lightgbm as lgb\n",
     "    return lgb\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# ===============================================\n",
     "# 📋 PROJECT CONFIGURATION\n",
@@ -228,48 +231,73 @@
     "    def create_widgets(self):\n",
     "        \"\"\"Create all UI widgets with interactive map for region selection\"\"\"\n",
     "        # App title\n",
+    "        # App title\n",
     "        self.title = widgets.HTML(\n",
     "            value=\"\"\"\n",
     "            <div style='text-align: center; padding: 20px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);\n",
     "                        color: white; border-radius: 10px; margin-bottom: 20px;'>\n",
-    "                <h1 style='margin: 0; font-size: 28px;'>🛰️ Google Alpha Earth Foundation Model for Land Cover Classification</h1>\n",
+    "                <h1 style='margin: 0; font-size: 28px;'>🛰️ Google AlphaEarth Foundations App for Land Cover Classification</h1>\n",
+    "                <p style='margin: 10px 0 0 0; font-size: 16px; font-style: italic; opacity: 0.9;'>\n",
+    "                     Will you still need me, will you still feed me, when I'm Sixty-four? 🎵\n",
+    "                </p>\n",
     "            </div>\n",
     "            \"\"\"\n",
     "        )\n",
     "\n",
     "        # Welcome description box\n",
     "        self.welcome_box = widgets.HTML(\n",
-    "            value=\"\"\"\n",
-    "            <div style='background: #f8f9ff; padding: 20px; border-radius: 10px; margin-bottom: 20px;\n",
-    "                        border-left: 4px solid #4f46e5; color: #1e293b;'>\n",
-    "                <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6;'>\n",
-    "                    <strong>Welcome to this App, that uses the AlphaEarth Foundation Model for Land Cover Classification tasks.</strong> \n",
-    "                    You will interact face to face with the 64 embeddings from Google's AlphaEarth Foundation Model to classify \n",
-    "                    land cover types using validated label data from the Ecological Society of America (2020). This is a unique opportunity \n",
-    "                    to explore how abstract embeddings from a cutting-edge Google DeepMind foundation model capture ecological patterns \n",
-    "                    and to identify which embeddings are most important for specific pairwise classification tasks.\n",
-    "                </p>\n",
-    "                \n",
-    "                <p style='margin: 0 0 10px 0; font-size: 16px; font-weight: 500; color: #1e40af;'>\n",
-    "                    For example, you can compare:\n",
-    "                </p>\n",
-    "                <ul style='margin: 0 0 15px 20px; font-size: 15px; line-height: 1.5; color: #2563eb;'>\n",
-    "                    <li style='color: #2563eb; font-weight: 500;'><strong>Built-up vs Water</strong></li>\n",
-    "                    <li style='color: #2563eb; font-weight: 500;'><strong>Cropland vs Grassland</strong></li>\n",
-    "                    <li style='color: #2563eb; font-weight: 500;'><strong>Shrubland vs Tree cover</strong></li>\n",
-    "                </ul>\n",
-    "                \n",
-    "                <p style='margin: 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>\n",
-    "                    and determine which embeddings play the most significant role in those pairwise distinctions. To support \n",
-    "                    your analysis, the app provides four classifier options: Random Forest, XGBoost, Gradient Boosting, and LightGBM, \n",
-    "                    plus other control parameters. All user interactions will be recorded as part of an effort to better interpret \n",
-    "                    these embeddings and translate them into more intuitive, lower-dimensional representations tailored for specific applications.\n",
-    "                    After a few exercises, you’ll gain intuitive insights into how powerful this foundation model can be for your machine learning tasks\n",
-    "                    in geospatial science. 🙌\n",
-    "                </p>\n",
-    "            </div>\n",
-    "            \"\"\"\n",
-    "        )\n",
+    "    value=\"\"\"\n",
+    "    <div style='background: #f8f9ff; padding: 20px; border-radius: 10px; margin-bottom: 20px;\n",
+    "                border-left: 4px solid #4f46e5; color: #1e293b;'>\n",
+    "        <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6;'>\n",
+    "            <span style='color: #dc2626; font-weight: bold;'>Welcome, please read before running the App:</span> \n",
+    "            this app uses the <strong style='color: #2563eb;'>AlphaEarth AI-Foundation Model</strong> for Land Cover Classification tasks.\n",
+    "            You will interact face to face with the 64 embeddings from Google's AlphaEarth Foundation Model to classify \n",
+    "            land cover types using validated label data from the Ecological Society of America (2020). This is a unique opportunity \n",
+    "            to explore how abstract embeddings from a cutting-edge Google DeepMind foundation model capture ecological patterns \n",
+    "            and to identify which embeddings are most important for specific pairwise classification tasks.\n",
+    "        </p>\n",
+    "        \n",
+    "        <p style='margin: 0 0 10px 0; font-size: 16px; font-weight: 500; color: #1e40af;'>\n",
+    "            For example, you can compare:\n",
+    "        </p>\n",
+    "        <ul style='margin: 0 0 15px 20px; font-size: 15px; line-height: 1.5; color: #2563eb;'>\n",
+    "            <li style='color: #2563eb; font-weight: 500;'><strong>Built-up vs Water</strong></li>\n",
+    "            <li style='color: #2563eb; font-weight: 500;'><strong>Cropland vs Grassland</strong></li>\n",
+    "            <li style='color: #2563eb; font-weight: 500;'><strong>Shrubland vs Tree cover</strong></li>\n",
+    "        </ul>\n",
+    "        \n",
+    "        <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>\n",
+    "            and determine which embeddings play the most significant role in those pairwise distinctions. To support \n",
+    "            your analysis, the app provides four classifier options: Random Forest, XGBoost, Gradient Boosting, and LightGBM, \n",
+    "            plus other control parameters. All user interactions will be recorded as part of an effort to better interpret \n",
+    "            these embeddings and translate them into more intuitive, lower-dimensional representations tailored for specific applications.\n",
+    "            After a few exercises, you'll gain intuitive insights into how powerful this foundation model can be for your machine learning tasks\n",
+    "            in geospatial science. 🙌\n",
+    "        </p>\n",
+    "        \n",
+    "        <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6; color: #1e293b;'>                    \n",
+    "            To run this app with all features (not just demo), you need to first create a free Google Earth Engine account at \n",
+    "            <a href=\"https://signup.earthengine.google.com\" target=\"_blank\" style=\"color: #2563eb; text-decoration: underline; font-weight: 500;\">signup.earthengine.google.com</a>. After that, you must create and register a Google Cloud Project under the non-commercial \n",
+    "            option, which automatically enables the Earth Engine API. Once your account and project are set up, the app can connect \n",
+    "            securely to Earth Engine, moving beyond demo mode and giving you full access to datasets and geospatial analysis tools.                    \n",
+    "        </p>\n",
+    "        \n",
+    "        <div style='background: #e0f2fe; padding: 15px; border-radius: 8px; border-left: 4px solid #0288d1;'>\n",
+    "            <h4 style='margin: 0 0 10px 0; font-size: 16px; font-weight: bold; color: #01579b;'>\n",
+    "                📋 Instructions:\n",
+    "            </h4>\n",
+    "            <ol style='margin: 0; font-size: 15px; line-height: 1.6; color: #1e293b;'>\n",
+    "                <li style='margin-bottom: 6px;'><strong>Select a Region of Interest (ROI)</strong> drawing a rectangle on the map</li>\n",
+    "                <li style='margin-bottom: 6px;'><strong>Select land cover classes</strong> for classification</li>\n",
+    "                <li style='margin-bottom: 6px;'><strong>Select Algorithm Settings</strong> (type, % of test data, number of samples per class, spatial scale and seed)</li>\n",
+    "                <li style='margin-bottom: 6px;'><strong>Hit the RUN ANALYSIS button</strong></li>\n",
+    "                <li style='margin-bottom: 6px;'><strong>Check results</strong></li>\n",
+    "            </ol>\n",
+    "        </div>\n",
+    "    </div>\n",
+    "    \"\"\"\n",
+    ")\n",
     "\n",
     "        # Attribution box\n",
     "        self.attribution_box = widgets.HTML(\n",
@@ -287,7 +315,7 @@
     "\n",
     "        # Region selection with interactive map\n",
     "        self.region_title = widgets.HTML(\n",
-    "            \"<h3 style='color: #2c3e50; margin: 20px 0 10px 0;'>📍 Interactive Region Selection</h3>\"\n",
+    "            \"<h3 style='color: #2c3e50; margin: 20px 0 10px 0;'>📍 Region of Interest (ROI) selection</h3>\"\n",
     "        )\n",
     "\n",
     "        self.region_help = widgets.HTML(\n",
@@ -297,8 +325,7 @@
     "                <b style='color: #0c4a6e;'>🗺️ How to select your region:</b><br>\n",
     "                <span style='color: #374151;'>1️⃣ Click the rectangle tool (📦) in the map toolbar</span><br>\n",
     "                <span style='color: #374151;'>2️⃣ Click and drag on the map to draw your region</span><br>\n",
-    "                <span style='color: #374151;'>3️⃣ Use the trash tool (🗑️) to delete rectangles</span><br>\n",
-    "                <span style='color: #374151;'>4️⃣ Only the most recent rectangle will be used</span>\n",
+    "                <span style='color: #374151;'>3️⃣ Use the trash tool (🗑️) to delete rectangles</span><br>                \n",
     "            </div>\n",
     "            \"\"\"\n",
     "        )\n",
@@ -723,7 +750,7 @@
     "            <div style='background: #dbeafe; padding: 12px; border-radius: 8px; margin: 10px 0;\n",
     "                        border-left: 4px solid #3b82f6; text-align: center;'>\n",
     "                <span style='color: #1e40af; font-weight: bold; font-size: 16px;'>\n",
-    "                    🛰️ Processing satellite embeddings and generating analysis...\n",
+    "                    🛰️ Processing embeddings and generating results...\n",
     "                </span>\n",
     "            </div>\n",
     "            \"\"\"\n",
@@ -966,7 +993,7 @@
     "\n",
     "                # Then display map\n",
     "                print(\"💡 Use the layer control panel to toggle layers on/off\")\n",
-    "                print(\"🎨 Small color bars in bottom-right corner show embedding values (0.0-1.0)\")\n",
+    "                print(\"🎨 Color bars in bottom-right corner show normalized embedding values (0.0 - 1.0)\")\n",
     "                display(m)\n",
     "\n",
     "                out_path = os.path.abspath(\"alphaearth_map.html\")\n",
@@ -1033,7 +1060,7 @@
     "        cm_df = pd.DataFrame(cm, index=['A(0)','B(1)'], columns=['P0','P1'])\n",
     "        print(cm_df)\n",
     "\n",
-    "        print(f\"\\n🏆 Top 5 Most Important Embeddings:\")\n",
+    "        print(f\"\\n🏆 Top 3 Most Important Embeddings:\")\n",
     "        for i, (display_name, importance_pct, original_band) in enumerate(top5):\n",
     "            print(f\"   {i+1}. {display_name}: {importance_pct:.2f}%\")\n",
     "\n",
@@ -1061,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 91,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1083,7 +1110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0b27e17cc2b4b5082df3521f9b76bcc",
+       "model_id": "a323c1916ea141f7b2abcdc8da525141",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1093,20 +1120,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "✅ App ready!\n",
-      "💡 Instructions:\n",
-      "   1. Draw a rectangle on the map above to select your region\n",
-      "   2. Choose your land cover classes to compare\n",
-      "   3. Configure algorithm settings\n",
-      "   4. Click 'RUN ANALYSIS' to start\n",
-      "🎨 NEW: Small, clean color bars will appear in the bottom-right corner showing embedding values!\n"
-     ]
     }
    ],
    "source": [
@@ -1120,13 +1133,6 @@
     "app = AlphaEarthApp(PROJECT_ID)\n",
     "app.display_app()\n",
     "\n",
-    "print(\"\\n✅ App ready!\")\n",
-    "print(\"💡 Instructions:\")\n",
-    "print(\"   1. Draw a rectangle on the map above to select your region\")\n",
-    "print(\"   2. Choose your land cover classes to compare\")\n",
-    "print(\"   3. Configure algorithm settings\")\n",
-    "print(\"   4. Click 'RUN ANALYSIS' to start\")\n",
-    "print(\"🎨 NEW: Small, clean color bars will appear in the bottom-right corner showing embedding values!\")\n",
     "    "
    ]
   }
