--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 115,
    "metadata": {
     "tags": []
    },
@@ -995,10 +995,79 @@
     "                print(\"💡 Use the layer control panel to toggle layers on/off\")\n",
     "                print(\"🎨 Color bars in bottom-right corner show normalized embedding values (0.0 - 1.0)\")\n",
     "                display(m)\n",
+    "                \n",
+    "                # Create download button for embedding rasters (LOCAL DOWNLOAD)\n",
+    "                download_button = widgets.Button(\n",
+    "                    description='📥 Download Top 3 Embedding Rasters',\n",
+    "                    button_style='info',\n",
+    "                    layout=widgets.Layout(width='400px', height='45px', margin='15px 0'),\n",
+    "                    tooltip='Generate download links for the top 3 most important embeddings'\n",
+    "                )\n",
+    "                \n",
+    "                download_status = widgets.HTML()\n",
+    "                \n",
+    "                def download_embeddings(b):\n",
+    "                    download_status.value = \"\"\"\n",
+    "                    <div style='background: #dbeafe; padding: 10px; border-radius: 8px; margin: 10px 0; text-align: center;'>\n",
+    "                        <strong>📥 Generating download links...</strong> This may take a few moments.\n",
+    "                    </div>\n",
+    "                    \"\"\"\n",
+    "                    \n",
+    "                    try:\n",
+    "                        download_links_html = \"<div style='background: #f0f9ff; padding: 15px; border-radius: 8px; margin: 10px 0;'>\"\n",
+    "                        download_links_html += \"<h4 style='color: #1e40af; margin: 0 0 10px 0; text-align: center;'>📥 Click links below to download:</h4>\"\n",
+    "                        \n",
+    "                        # Generate download links for each of the top 3 embeddings\n",
+    "                        for i, layer in enumerate(embedding_layers):\n",
+    "                            print(f\"📥 Generating download link for {layer['name']} (Rank {layer['rank']})...\")\n",
+    "                            \n",
+    "                            # Get download URL from Earth Engine\n",
+    "                            download_url = layer['image'].getDownloadURL({\n",
+    "                                'scale': self.scale_m.value,\n",
+    "                                'crs': 'EPSG:4326',\n",
+    "                                'region': region,\n",
+    "                                'format': 'GEO_TIFF',\n",
+    "                                'name': f\"embedding_{layer['name']}_{self.class_a.value}vs{self.class_b.value}\"\n",
+    "                            })\n",
+    "                            \n",
+    "                            # Add to download links HTML\n",
+    "                            download_links_html += f\"\"\"\n",
+    "                            <div style='margin: 8px 0; padding: 10px; background: white; border-radius: 6px; border-left: 3px solid #3b82f6;'>\n",
+    "                                <strong>🏆 {layer['name']}</strong> ({layer['importance']:.1f}% importance)<br>\n",
+    "                                <a href=\"{download_url}\" target=\"_blank\" style='color: #2563eb; text-decoration: none; font-weight: 500;'>\n",
+    "                                    📁 Download embedding_{layer['name']}_{self.class_a.value}vs{self.class_b.value}.tif\n",
+    "                                </a>\n",
+    "                            </div>\n",
+    "                            \"\"\"\n",
+    "                        \n",
+    "                        download_links_html += \"</div>\"\n",
+    "                        \n",
+    "                        download_status.value = \"\"\"\n",
+    "                        <div style='background: #dcfce7; padding: 10px; border-radius: 8px; margin: 10px 0; text-align: center;'>\n",
+    "                            <strong>✅ Download links ready!</strong> Click the links below to save files to your computer.\n",
+    "                        </div>\n",
+    "                        \"\"\" + download_links_html\n",
+    "                        \n",
+    "                    except Exception as e:\n",
+    "                        download_status.value = f\"\"\"\n",
+    "                        <div style='background: #fee2e2; padding: 10px; border-radius: 8px; margin: 10px 0; text-align: center;'>\n",
+    "                            <strong>❌ Download generation failed:</strong> {str(e)}\n",
+    "                        </div>\n",
+    "                        \"\"\"\n",
+    "                \n",
+    "                download_button.on_click(download_embeddings)\n",
+    "                \n",
+    "                # Display download section\n",
+    "                display(widgets.VBox([\n",
+    "                    widgets.HTML(\"<div style='text-align: center; margin: 20px 0;'><h4 style='color: #1e40af;'>📥 Download Embedding Rasters</h4></div>\"),\n",
+    "                    download_button,\n",
+    "                    download_status\n",
+    "                ], layout=widgets.Layout(align_items='center')))\n",
+    "                \n",
     "\n",
     "                out_path = os.path.abspath(\"alphaearth_map.html\")\n",
     "                m.save(out_path)\n",
-    "                print(f\"\\nSaved interactive map to: {out_path}\")\n",
+    "                \n",
     "\n",
     "                self.status.value = \"\"\"\n",
     "                <div style='background: #dcfce7; padding: 12px; border-radius: 8px; margin: 10px 0;\n",
@@ -1088,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 117,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1100,17 +1169,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🛰️ Initializing Google AlphaEarth Land Cover Classifier...\n",
-      "🔄 Installing required libraries for interactive map and color scales...\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a323c1916ea141f7b2abcdc8da525141",
+       "model_id": "5f8e5cec4c5142edb012b157299b277e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1126,9 +1187,6 @@
     "# ===============================================\n",
     "# 🚀 LAUNCH THE APP\n",
     "# ===============================================\n",
-    "\n",
-    "print(\"🛰️ Initializing Google AlphaEarth Land Cover Classifier...\")\n",
-    "print(\"🔄 Installing required libraries for interactive map and color scales...\")\n",
     "\n",
     "app = AlphaEarthApp(PROJECT_ID)\n",
     "app.display_app()\n",
