--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
@@ -252,7 +252,7 @@
     "        <p style='margin: 0 0 15px 0; font-size: 16px; line-height: 1.6;'>\n",
     "            <span style='color: #dc2626; font-weight: bold;'>Welcome, please read before running the App:</span> \n",
     "            this app uses the <strong style='color: #2563eb;'>AlphaEarth AI-Foundation Model</strong> for Land Cover Classification tasks.\n",
-    "            You will interact face to face with the 64 embeddings from Google's AlphaEarth Foundation Model to classify \n",
+    "            You will interact face to face with the 64 embeddings of this model (year 2020) to classify \n",
     "            land cover types using validated label data from the Ecological Society of America (2020). This is a unique opportunity \n",
     "            to explore how abstract embeddings from a cutting-edge Google DeepMind foundation model capture ecological patterns \n",
     "            and to identify which embeddings are most important for specific pairwise classification tasks.\n",
@@ -1059,7 +1059,6 @@
     "                \n",
     "                # Display download section\n",
     "                display(widgets.VBox([\n",
-    "                    widgets.HTML(\"<div style='text-align: center; margin: 20px 0;'><h4 style='color: #1e40af;'>📥 Download Embedding Rasters</h4></div>\"),\n",
     "                    download_button,\n",
     "                    download_status\n",
     "                ], layout=widgets.Layout(align_items='center')))\n",
@@ -1130,7 +1129,7 @@
     "        print(cm_df)\n",
     "\n",
     "        print(f\"\\n🏆 Top 3 Most Important Embeddings:\")\n",
-    "        for i, (display_name, importance_pct, original_band) in enumerate(top5):\n",
+    "        for i, (display_name, importance_pct, original_band) in enumerate(top5[:3]):\n",
     "            print(f\"   {i+1}. {display_name}: {importance_pct:.2f}%\")\n",
     "\n",
     "        # Feature importance plot - from working code\n",
@@ -1150,14 +1149,18 @@
     "        plt.bar(range(len(arr)), arr, color=colors)\n",
     "        plt.xticks(range(len(arr)), xlabels, rotation=90)\n",
     "        plt.ylabel(\"Importance (%)\")\n",
-    "        plt.title(f\"Embedding importance: {self.class_a.value} vs {self.class_b.value} [{self.algorithm.value.upper()}] (Yellow = Top 3 with color bars)\")\n",
+    "         # Get class names for the title\n",
+    "        class_a_name = self.ESA_CLASSES.get(self.class_a.value, f\"Class {self.class_a.value}\")\n",
+    "        class_b_name = self.ESA_CLASSES.get(self.class_b.value, f\"Class {self.class_b.value}\")\n",
+    "        \n",
+    "        plt.title(f\"Embedding importance: {class_a_name} vs {class_b_name} [model = {self.algorithm.value.upper()}] (Yellow = Top 3 highest)\")\n",
     "        plt.tight_layout()\n",
     "        plt.show() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1171,7 +1174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f8e5cec4c5142edb012b157299b277e",
+       "model_id": "e1527cd8b2914866a62b0e42fb8a3e59",
        "version_major": 2,
        "version_minor": 0
       },
